[metadata]
name = excel_wrapper
version = 0.2
summary = OpenMDAO Wrapper for Excel
description-file = README.txt
keywords = openmdao, excel
home-page = 
download-url = 
author = Zsolt Lattmann
author-email =
maintainer = Young-Ki Lee
maintainer-email = ylee@asdl.gatech.edu
license = GNU General Public License, version 2
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

